manifests/prometheus-alert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  labels:
    app: prometheus
    component: alert
  annotations:
    prometheus.io/scrape: 'true'
spec:
  selector:
    app: prometheus
    component: alert
  type: NodePort
  ports:
  - port: 9093
    nodePort: 30093
    protocol: TCP
