manifests/prometheus-node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: prometheus-node-exporter
  labels:
    app: prometheus
    component: node-exporter
spec:
  # see http://kubernetes.io/docs/user-guide/services/#with-selectors
  type: ClusterIP
  clusterIP: None
  ports:
    - name: prometheus-node-exporter
      port: 9100
      protocol: TCP
  selector:
    app: prometheus
    component: node-exporter
