manifests/grafana-core-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  backend:
    serviceName: grafana
    servicePort: 3000
